[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bamboo-franka-controller"
version = "0.1.0"
description = "Bamboo Franka Robot Controller with Joint Impedance Control"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bamboo Development Team"},
]
keywords = ["robotics", "franka", "control", "impedance", "robot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    # Core scientific computing
    "numpy>=1.20.0",
    "pyzmq>=22.0.0",

    # Hardware communication
    "pyserial>=3.4",
    "pymodbus==2.5.3",

    # Serialization
    "msgpack",
]

[project.urls]
Homepage = "https://github.com/chsahit/bamboo"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["bamboo*"]
exclude = ["tests*", "docs*", "install*", "build*"]

[tool.setuptools.package-data]
"bamboo.examples" = ["*.proto", "*.py"]
"bamboo.proto" = ["*.proto"]

# Development tool configurations
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "third_party/",
    "install/",
    "build/",
]
